--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "submodules/hunyuan3d"]
 	path = submodules/hunyuan3d
 	url = https://github.com/Tencent/Hunyuan3D-2.git
+[submodule "submodules/trellis"]
+	path = submodules/trellis
+	url = https://github.com/microsoft/TRELLIS.git
